# morale-meter-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: tests.yml
src/: api.rs  index.rs  main.rs
